Fix vertical alignment middle inside stacked superova items

--- a/packages/block-library/src/blocks/supernova/scss/_card.scss
+++ b/packages/block-library/src/blocks/supernova/scss/_card.scss
@@ -31,8 +31,23 @@
   }
 }
 
+:root {
+  --nb-supernova-item-carousel-padding-bottom: 0px;
+  --nb-header-neighbour-padding-top: 0px;
+}
+
 .nb-supernova-item__inner-container {
   padding: var(--nb-card-content-padding, 0);
+  --nb-supernova-item-padding-top: max(var(--nb-header-neighbour-padding-top), var(--nb-card-content-padding));
+  --nb-supernova-item-padding-bottom: max(var(--nb-supernova-item-carousel-padding-bottom), var(--nb-card-content-padding));
+  padding-top:  var(--nb-supernova-item-padding-top) !important;
+  padding-bottom: var(--nb-supernova-item-padding-bottom) !important;
+
+  .nb-supernova--card-layout-stacked.nb-supernova--valign-center & {
+    --nb-supernova-item-padding: max(var(--nb-supernova-item-padding-top), var(--nb-supernova-item-padding-bottom));
+    padding-top: var(--nb-supernova-item-padding) !important;
+    padding-bottom: var(--nb-supernova-item-padding) !important;
+  }
 }
 
 .nb-supernova-item__media-wrapper {
